force-app/main/default/objects/Unreviewed_Custom_Object__c/Unreviewed_Custom_Object__c.object-meta.xml
<CustomObject>
    <label>QA Unreviewed_Custom_Object</label>
    <nameField>
        <label>Unreviewed_Custom_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Unreviewed Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>