force-app/main/default/objects/Unreviewed_Custom_Object__c/fields/EventSubtype__c.field-meta.xml
<CustomField>
    <fullName>EventSubtype__c</fullName>
    <label>EventSubtype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>