force-app/main/default/objects/Unreviewed_Custom_Object__c/fields/ownerName__c.field-meta.xml
<CustomField>
    <fullName>ownerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ownerName</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Unreviewed_Custom_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>