force-app/main/default/objects/Unreviewed_Custom_Object__c/fields/Q_assign_Last_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Q_assign_Last_Assigned_Date__c</fullName>
    <label>Q_assign_Last_Assigned_Date</label>
    <type>DateTime</type>
</CustomField>