force-app/main/default/objects/Unreviewed_Custom_Object__c/fields/ShowAs__c.field-meta.xml
<CustomField>
    <fullName>ShowAs__c</fullName>
    <label>ShowAs</label>
    <length>100</length>
    <type>Text</type>
</CustomField>